<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/darkgray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/exit_window_text"
        style="@style/AppTheme.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_text" />

    <LinearLayout
        style="@style/AppTheme.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkgray" >

        <Button
            android:id="@+id/button_quit_yes"
            style="@style/AppTheme.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/button_quit_no"
            style="@style/AppTheme.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </LinearLayout>
    
</LinearLayout>
