<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leaderboard_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/help_padding"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rank"
            android:textSize="@dimen/title2_text" />

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="@dimen/title2_text" />

        <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="@dimen/title2_text" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/leaderboard_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </TableLayout>

</LinearLayout>
